
--Shaved another 10% off loading time by optimizing inner loop of kerning
  calculation during font loading.

--Fixed appearance of certain held objects, and arm position, after flipping
  character to left or right with mouse movement.  Fixes #657

--Fixed endless looping behavior if custom server address includes a bad
  hostname that gets looked up as invalid instantly.  Fixes #662




Server Fixes

--Server converts all incoming client emails to lower case.  Fixes #659

--Fixed rounding errors in computing fitness ranking.  Fixes #660

--Homelands expire immediately when last member of family dies (before, it
  would wait until no baby was born in homeland for 60 minutes).  Fixes #658




Version 350    2020-July-16

--Support for +causeAutoOrientV tag (opposite of +causeAutoOrientH).

--Fixed color of background box in category editor to not interfere with long
  text.

--Support for -wall tag in object description, to push what would otherwise be
  drawn in the wall layer into the non-wall layer (so that pipes through fences
  can visually connect properly, and not overlap other pipes in a weird way).





Server Fixes

--Fixed rare crash when client sends an illegal chat character (impossible with
  official client) when character is drunk.



Version 348    2020-July-10

--Support for moving objects that leave floors behind, or land on and change
  an existing floor.

--Support for road classes, so that logical road can continue across road
  variations (corners, t-junctions, etc.).

--Fixed crash when loading an empty category.

--Fixed biome ground tile glitch when floor doesn't completely cover tile
  square.




Version 346   2020-July-3

--Forbid backslash and quotes in login email address in client.

--Forbid player flipping when a 0-speed object is held (like cast fishing
  pole).  Fixes #644

--Object editor preserves use vanish when inserting an object.

--Category editor preserves index, if possible, when switching categories.
