@@ -21,6 +21,9 @@ Version 352    ???
 --Fixed endless looping behavior if custom server address includes a bad
   hostname that gets looked up as invalid instantly.  Fixes #662
 
+--CTRL-right-click on object picker in object editor inserts other object above
+  current sprite layer.
+
 
 
 
